--- a/default.hbs
+++ b/default.hbs
@@ -35,7 +35,7 @@
         {{!-- The tiny footer at the very bottom --}}
         <footer class="site-footer clearfix">
             <section class="copyright">
-                <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}} Modificado por <a href="https://www.facebook.com/Nitroherman">Herman Morales</a>
+                <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}} Modificado por <a href="https://www.hackemate.ninja">Hackemate</a>
             </section>
         </footer>
 
