--- a/post.hbs
+++ b/post.hbs
@@ -141,12 +141,12 @@
                     this.page.identifier = 'ghost-{{id}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
 
-                (function() { // DON'T EDIT BELOW THIS LINE
+                (function() { // substituye desde aqui
                     var d = document, s = d.createElement('script');
                     s.src = '//hackemate-1.disqus.com/embed.js';
                     s.setAttribute('data-timestamp', +new Date());
                     (d.head || d.body).appendChild(s);
-                })();
+                })(); // hasta aquí con tu propio código generado por disqus para que pueda funcionar lo de arria no lo cambies solo esto hay que cambiar
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
