modifications from original theme repo

--- a/error.hbs
+++ b/error.hbs
@@ -69,10 +69,8 @@
 </head>
 <body class="grey darken-4 {{body_class}}">
 
-<p>Ups al parecer hay un error haz click en mi nombre</p>
-<p>Herman Morales
-    <a href="javascript:window.history.back();" title="{{@blog.title}}">&laquo; Volver atrás</a>
-    XD<span>|</span></p>
+<p>... Nothing found here</p>
+<p><a href="javascript:window.history.back();" title="{{@blog.title}}">&laquo; Get back!</a></p>
 
 {{ghost_foot}}
 {{!-- Fitvids makes video embeds responsive and awesome --}}
