--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <div class="nav">
     <div class="nav-title-menu">
-        <h3 class="nav-title">Menu</h3>
+        <!-- <h3 class="nav-title">Menu</h3> -->
         <a href="#" class="nav-close">
             <span class="hidden">Close</span>
         </a>
