--- a/default.hbs
+++ b/default.hbs
@@ -35,7 +35,9 @@
         {{!-- The tiny footer at the very bottom --}}
         <footer class="site-footer clearfix">
             <section class="copyright">
-                <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}} Modificado por <a href="https://www.hackemate.ninja">Hackemate</a>
+                All contents published are my own, except when noticed. Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>                <!-- <a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}-->
+                <br>
+                <sub>(thanks to <a href="http://ghost.org">Ghost</a> project and the <a href="https://www.hackemate.ninja">theme author</a>)</sub>
             </section>
         </footer>
 
