--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -7,26 +7,26 @@
 {{#foreach posts}}
 <article class="{{post_class}}">
     <div class="post-bg" style="background-image:url({{image}})">
-        <div class="post-bg-adjust"></div> 
+        <div class="post-bg-adjust"></div>
         <div class="post-adjust">
             <div class="post-data">
                 <header class="post-header">
                     <h2 class="post-title"><a href="{{url}}">{{title}}</a></h2>
                 </header>
                 <section class="post-excerpt">
-                    <p>{{excerpt words="26"}}<a class="read-more" href="{{url}}">...</a></p>
+                    <p>{{excerpt words="48"}}<a class="read-more" href="{{url}}">... [read more] ...</a></p>
+                    <small><a class="comments-count" href="{{url}}#disqus_thread"></a></small>
                 </section>
                 <footer class="post-meta">
                     {{author}}
                     <time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="DD MMMM YYYY"}}</time>
                     <br><br>
                     {{tags prefix="" separator=""}}
-                    
                 </footer>
             </div>
         </div>
     </div>
-    
+
 </article>
 {{/foreach}}
 
